--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 .form-container {
   height: 500px;
   width: 400px;
-  padding: 25px 50px;
+  padding: 30px 50px;
   margin: auto;
   /* Neumorphism */
   border-radius: 30px;
@@ -35,24 +35,26 @@ h1 {
   text-align: center;
   color: #888;
   letter-spacing: 1px;
+  cursor: default;
 }
 
 form {
-  height: 80%;
-  margin-top: 10%;
+  /* height: 300px; */
+  height: 400px;
+  margin-top: 15px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
 
 label {
-  margin-bottom: -15%;
+  margin-bottom: -50px;
   margin-left: 5px;
   color: #555;
 }
 
 input {
-  height: 9%;
+  height: 10%;
   padding: 10px 15px;
   border-radius: 15px;
   border: none;
@@ -64,6 +66,10 @@ input[type="submit"] {
   letter-spacing: 2px;
   background-color: rgba(200, 200, 200, 0.7);
 }
+input[type="submit"]:hover {
+  cursor: pointer;
+  background-color: #c0c0c0;
+}
 
 input:focus {
   outline: 1px solid #888;
@@ -72,9 +78,4 @@ input:focus {
 
 input:hover {
   background-color: #ffffff;
-}
-
-.error-message {
-  margin: -10% auto;
-  color: #ed4337;
 }
