--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .form-container {
-  height: 500px;
+  height: 520px;
   width: 400px;
   padding: 30px 50px;
   margin: auto;
@@ -29,6 +29,8 @@ body {
     rgba(236, 236, 236, 0.6)
   );
   box-shadow: 15px 15px 30px #bebebe, -15px -15px 30px #f9f9f9;
+  /* Animation */
+  animation: fade 4s ease-in-out;
 }
 
 h1 {
@@ -39,8 +41,7 @@ h1 {
 }
 
 form {
-  /* height: 300px; */
-  height: 400px;
+  height: 380px;
   margin-top: 15px;
   display: flex;
   flex-direction: column;
@@ -78,4 +79,33 @@ input:focus {
 
 input:hover {
   background-color: #ffffff;
+}
+
+/* Register */
+
+#registerForm {
+  display: none;
+}
+
+#swapForm {
+  text-align: center;
+  margin-left: 5px;
+  color: #666;
+  cursor: pointer;
+}
+#swapForm:hover {
+  color: #333;
+}
+
+/* Animations */
+@keyframes fade {
+  from {
+    opacity: 0;
+    box-shadow: none;
+  }
+
+  to {
+    opacity: 1;
+    box-shadow: 15px 15px 30px #bebebe, -15px -15px 30px #f9f9f9;
+  }
 }
